--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="js/jquery.ui.touch-punch.min.js"   type="text/javascript"></script>
 <script src="js/jquery.mousewheel-3.1.9.min.js" type="text/javascript" ></script>
 <!--<script src="js/jquery.hammer-full.js"          type="text/javascript"></script>-->
-<script src="js/jquery.canvasmapz.js"           type="text/javascript"></script>
+<script src="js/jquery.mapz.js"                 type="text/javascript"></script>
 <script src="minecraftmap.js"                   type="text/javascript"></script>
 <script type="text/javascript">
 $(window).load(
@@ -42,7 +42,6 @@ $(window).load(
 </script>
 
 </head>
-<!--<body style="background-image:url('img/800px-landscape1-png.png'); background-size: cover;')">-->
 <body style="background-image:url('img/superflat.png'); background-size: cover; background-repeat: no-repeat; background-color:rgb(77,100,47); font-family: sans-serif;')">
 
 <center>
