--- a/index.html
+++ b/index.html
@@ -2,38 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 <title>Minecraft Map</title>
 <!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
 <link rel="stylesheet" href="style.css">
-<!--
-<script src="js/jquery-1.11.0.js"               type="text/javascript"></script>
-<script src="js/jquery-ui-1.10.4.js"            type="text/javascript"></script>
-<script src="js/jquery.mousewheel-3.1.9.js"     type="text/javascript" ></script>
--->
 <script src="js/jquery-1.11.0.min.js"           type="text/javascript"></script>
 <script src="js/jquery-ui-1.10.4.min.js"        type="text/javascript"></script>
 <script src="js/jquery.ui.touch-punch.min.js"   type="text/javascript"></script>
-<script src="js/jquery.mousewheel-3.1.9.min.js" type="text/javascript" ></script>
-<!--<script src="js/jquery.hammer-full.js"          type="text/javascript"></script>-->
+<script src="js/jquery.hammer.min-unknown.js"   type='text/javascript'></script><!-- I must be missing something, the official jquery.hammer versions don't work, but this one from http://solinitiative.com/demo/jquery.hammer.min.js does??? -->
+<script src="js/jquery.mousewheel-3.1.9.min.js" type="text/javascript"></script>
 <script src="js/jquery.mapz.js"                 type="text/javascript"></script>
 <script src="minecraftmap.js"                   type="text/javascript"></script>
 <script type="text/javascript">
 $(window).load(
 	function() {
+	
 		var locations = getMapLocations();
 	
-		createMapImageInDiv("zoomlevel1", 800,  800,  locations);
-		createMapImageInDiv("zoomlevel2", 1200, 1200, locations);
-		createMapImageInDiv("zoomlevel3", 1800, 1800, locations);
-		createMapImageInDiv("zoomlevel4", 2700, 2700, locations);		
+		createMapImageInDiv("zoomlevel1", 800,  800,  locations, false);
+		createMapImageInDiv("zoomlevel2", 1200, 1200, locations, false);
+		createMapImageInDiv("zoomlevel3", 1800, 1800, locations, false);
+		createMapImageInDiv("zoomlevel4", 2700, 2700, locations, false);		
 		
 		$("#map-1").mapz({
-			zoom : true,
-			createmaps : false,
-			mousewheel : true
+			zoom       : true,
+			mousewheel : true,
+			pinchzoom  : true,
+			createmaps : false
 		});
 	}
 );
