--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ head.js(
    {jquery_mousewheel: "js/jquery.mousewheel-3.1.9.min.js"},
    {jquery_hammer:     "js/jquery.hammer.min-unknown.js"},  // I must be missing something, the official jquery.hammer versions don't work, but this one from http://solinitiative.com/demo/jquery.hammer.min.js does???
    {jquery_touchpunch: "js/jquery.ui.touch-punch.min.js"},
-   {jquery_mapz:       "js/jquery.mapz.js"},
+   {csv:               "js/csv.js"},
+   {jquery_mapz:       "js/jquery.mapz.js"},   
    {minecraftmap:      "minecraftmap.js"}
 );
 </script>
