Adds hover-labels

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <![endif]-->
 
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Calligraffitti">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merienda">
+<!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Press Start 2P">-->
 
 <script src="js/head.min.js"></script>
 <script type="text/javascript">
@@ -45,7 +48,11 @@ head.js(
 	<div id="sunrisesign" class="sunsign hidden-sunsign" style="top: 352px; width: 192px; left: 410px">
 		<img src="img/sunrisesign.png" width="192" height="96"/>
 	</div>
-
+</div>
+<div style="position: absolute; left: 50%;">
+	<div id="hoverFrame" class="hidden-hoverFrame" style="position:relative; top: -20px; left: -50%; text-align: center; z-index: 30;">
+		<div id="locationDesc"></div>
+	</div>
 </div>
 
 <main>
