--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ head.js(
 	<img src="img/sunrisesign_arrow.png" width="192" height="96" align="right"/>
 </div>
 		
-<div style="position:absolute; bottom: 5px; right: 5px; font-size: 11px; font-family: sans-serif">created at <a href="http://buildingwithblocks.info">BuildingWithBlocks.info</a></div>
+<div style="position:absolute; bottom: 5px; right: 5px; font-size: 11px; font-family: sans-serif">create your own at <a href="http://buildingwithblocks.info">BuildingWithBlocks.info</a></div>
 <div class="resources">
 	<img id="map-background" src="img/map64.png"/>
 	<img id="map-tileset" src="img/glyphs.png"/>
