--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@ head.js(
 </div>
 <div style="position: absolute; left: 50%;">
 	<div id="hoverFrame" class="hidden-hoverFrame" style="position:relative; top: -20px; left: -50%; text-align: center; z-index: 30;">
-		<div id="locationDesc">
-			<!-- Take advantage of this hidden frame to include the fonts in the document 
-			     so that $(document).ready() isn't triggered before they are loaded.
-				 The contents of locationDesc will get cleared anyway. -->
-			<span class="font-family: 'Merienda';">M</span><span class="font-family: 'Calligraffitti';">ap</span>
-		</div>
+		<div id="locationDesc"></div>
 	</div>
 </div>
 
@@ -75,7 +70,11 @@ head.js(
 	<img src="img/sunrisesign_arrow.png" width="192" height="96" align="right"/>
 </div>
 		
-<div style="position:absolute; bottom: 5px; right: 5px; font-size: 11px; font-family: sans-serif">create your own at <a href="http://buildingwithblocks.info">BuildingWithBlocks.info</a></div>
+<div class="credittext" style="position:absolute; bottom: 5px; right: 5px;">
+	<!-- Take advantage of this tiny text to include the fonts in the document 
+		 so that $(document).ready() isn't triggered before they are loaded. -->
+	create your own at <a href="http://buildingwithblocks.info">BuildingWithBlocks.info</a><span class="font-family: 'Calligraffitti';">.</span>
+</div>
 <div class="resources">
 	<img id="map-background" src="img/map64.png"/>
 	<img id="map-tileset" src="img/glyphs.png"/>
@@ -88,7 +87,7 @@ head.ready(
 	function() {
 		// head.js has loaded all the javascript scrips
 	
-		$(document).ready(
+		$(window).load(
 			function() {
 				// All DOM and images and CSS etc has been loaded
 	
