More more on instructions page

--- a/instructions/googledrive.html
+++ b/instructions/googledrive.html
@@ -67,18 +67,18 @@
 		
 		<p>Your locations file is now available on the web, the last step is to put its unique code into the map URL.</p>
 
-		<h2><a id="GoogleDriveId">Get your file's unique code</a></h2>
+		<h2><a id="GoogleId">Get your file's unique code</a></h2>
 
 		<p>Copy the text in the "Link to share" box
 		<br/>
 		<img src="images/googledrive-copylink.png"/>
 		</p>
 		
-		You will end up with some text that looks like this:<br/>
+		You will end up with some text that looks like this, the letters I've colored green are the file's code:<br/>
 		<pre style="color: grey;">https://drive.google.com/file/d/<span style="color:green;">0B35KCzsTLKY1YTZ3Y2NoQ3hGS00</span>/edit?usp=sharing</pre>
 		
-		<p>Everything between <span class="monospace" style="color:black;">https://docs.google.com/file/d/</span> and <span class="monospace" style="color:black;">/edit?usp=sharing</span> is 
-		your file's unique code - I've highlighted the code in green. This code is what you need.</p>
+		<p>i.e. everything between <span class="monospace" style="color:black;">https://docs.google.com/file/d/</span> and <span class="monospace" style="color:black;">/edit?usp=sharing</span> is 
+		your file's unique code.</p>
 		
 		<p>Add your file's unique code to the end of this URL...
 		<pre>https://googledrive.com/host/0B35KCzsTLKY1bXBnOGdSR0V0ZUU/index.html?googlesrc=</pre>
